<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    android:orientation="vertical"
    tools:context=".Ciudades">

    <TextView
        android:id="@+id/textView"
        android:layout_width="381dp"
        android:layout_height="54dp"
        android:layout_margin="16dp"
        android:text="@string/texto_bienvenida"
        android:textColor="@color/teal_200"
        android:textColorHighlight="@color/black" />

    <Button
        android:id="@+id/bfcp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton_fcp" />

    <Button
        android:id="@+id/btul"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton_tul"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/bcan"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton_can" />

    <Button
        android:id="@+id/bpla"
        style="@android:style/Widget.Material.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton_pla" />

    <Button
        android:id="@+id/bsha"
        style="@android:style/Widget.Material.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton_sha" />

</LinearLayout>